# creator

./: .dockerignore  .env.example  .gitignore  README.md  design-qa.md  docker-compose.yml  douyin-creator-center-ai-prd.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: desktop-build.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: kernel-smoke.test.ts  production-config.test.ts  server.test.ts  server.ts
apps/data-kernel/: .dockerignore  Dockerfile  package.json  pyproject.toml
apps/data-kernel/app/: __init__.py  healthcheck.py  main.py  schemas.py  tools.py
apps/data-kernel/tests/: test_tools.py
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json
apps/desktop/src/main/: appServer.ts  index.ts  security.ts  window.ts
apps/desktop/src/preload/: index.ts
apps/web/: index.html  package.json  tailwind.config.js  vercel.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  appRoutes.tsx  constants.ts  indexHtml.test.ts  styles.css  types.ts
apps/web/src/components/effects/: AskAgentButton.tsx  AuroraBackground.tsx  GlowingPanel.tsx
apps/web/src/components/ui/: PhosphorHoverIcon.tsx  notch.tsx
apps/web/src/features/agent/: AgentDrawer.test.tsx  AgentDrawer.tsx  AgentDrawerContainer.test.tsx  AgentDrawerContainer.tsx  api.ts  (+10 more)
apps/web/src/lib/: format.ts
apps/web/src/test/: MagneticButton.test.tsx  setup.ts
ref/manuarora700-cryptgen-template-aceternity-a0bc3636df257fd85c541072b9df0dc6e28a349d 2/: package-lock.json  package.json
(+57 files in other folders)
