[project]
name = "creator-data-kernel"
version = "0.1.0"
description = "FastAPI sidecar for deterministic creator data analysis tools."
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4.0",
  "fastapi>=0.124.0",
  "pandas>=2.3.0",
  "pydantic>=2.12.0",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.28.0",
  "pytest>=9.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
